--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.12"
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
+    "astro": "^5.16.12",
+    "leaflet": "^1.9.4",
+    "tailwindcss": "^4.1.18"
   }
 }
